<resources>
    <string name="app_name">SQLiteFile</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="re_enter">Re-enter:</string>
    <string name="submit">Submit</string>
    <string name="password">Password: </string>
    <string name="nama">Nama:</string>
    <string name="add_user">ADD User</string>
    <string name="id">ID</string>
</resources>