<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddUser">

    <TextView
        android:id="@+id/tvNama"
        android:layout_width="72dp"
        android:layout_height="20dp"
        android:text="@string/nama"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.088" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="72dp"
        android:layout_height="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/password"
        app:layout_constraintEnd_toEndOf="@+id/tvNama"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvNama"
        app:layout_constraintTop_toTopOf="@+id/tvNama" />

    <TextView
        android:id="@+id/tvPassword2"
        android:layout_width="72dp"
        android:layout_height="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/re_enter"
        app:layout_constraintEnd_toEndOf="@+id/tvPassword"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/tvPassword"
        app:layout_constraintTop_toTopOf="@+id/tvPassword" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/tvNama"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvNama"
        app:layout_constraintTop_toTopOf="@+id/tvNama"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/tvPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvPassword"
        app:layout_constraintTop_toTopOf="@+id/tvPassword"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/re_enter_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/tvPassword2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvPassword2"
        app:layout_constraintTop_toTopOf="@+id/tvPassword2"
        app:layout_constraintVertical_bias="0.32"
        android:autofillHints="" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="@+id/tvPassword2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvPassword2"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword2" />
</androidx.constraintlayout.widget.ConstraintLayout>